# email-copilot-skill

./: .gitignore  README.md  SKILL-RECIPES.md  SKILL.md  config.toml.example  gmail_client.py  pyproject.toml  rules.md.example
scripts/: email_cli.py
